[gd_scene load_steps=6 format=3 uid="uid://true_threat_shield_001"]

[ext_resource type="Script" path="res://scripts/entities/true_threat_shield.gd" id="1"]
[ext_resource type="Script" path="res://scripts/components/veil_component.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://clrw62xcbpj7r" path="res://assets/sprites/placeholder/PLACEHOLDER_player.png" id="3"]
[ext_resource type="Script" path="res://scripts/components/range_indicator.gd" id="4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 32)

[node name="TrueThreatShield" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.5, 0.5, 0.5, 0.8)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3")

[node name="ShieldSprite" type="Sprite2D" parent="."]
modulate = Color(0.2, 0.6, 1, 0.6)
scale = Vector2(1.4, 1.4)
texture = ExtResource("3")

[node name="VeilComponent" type="Node" parent="."]
script = ExtResource("2")

[node name="RangeIndicator" type="Node2D" parent="."]
script = ExtResource("4")
